# coding-challenge

./: CMakeLists.txt  ReadMe.md  cheatsheet.md  main.cpp
include/: IntentEstimator.hpp  IntentMenu.hpp  Intents.hpp  Menu.hpp
src/: IntentEstimator.cpp  IntentMenu.cpp  Menu.cpp
test/: CMakeLists.txt  CodingChallenge_test.cpp
